--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Garvetur Luxury Porto — Mapa do Porto (CSV/XLSX/GeoJSON)</title>
+  <title>Garvetur Luxury Porto — Mapa do Porto (XLSX/CSV/GeoJSON + Tooltips)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    html, body { height:100%; margin:0 }
+    :root { --panel:#ffffff; --shadow:0 6px 24px rgba(0,0,0,.12); --radius:12px; --brand:#bfa06a; --dark:#111; }
+    html, body { height:100%; margin:0; background:#f5efe6 }
     #map { position:absolute; inset:0 }
-    .controls { position:absolute; top:12px; left:12px; z-index:1000; background:#fff; padding:10px; border-radius:12px; box-shadow:0 6px 24px rgba(0,0,0,.12); font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial; max-width:460px }
+    .controls { position:absolute; top:12px; left:12px; z-index:1000; background:var(--panel); padding:12px; border-radius:var(--radius); box-shadow:var(--shadow); font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial; max-width:480px; border:1px solid #eee }
+    .controls strong { color:var(--dark) }
     .controls label { display:block; font-size:12px; margin-top:8px }
     .controls input, .controls select, .controls textarea { width:100%; padding:6px 8px; border:1px solid #ddd; border-radius:8px; font-size:12px }
     .controls button { margin-top:8px; padding:8px 10px; border:0; border-radius:10px; cursor:pointer; background:#111; color:#fff }
-    .toolbar { position:absolute; right:12px; top:12px; z-index:1000; display:flex; gap:8px }
-    .toolbar button { background:#fff; border:1px solid #eee; border-radius:10px; padding:8px 10px; box-shadow:0 6px 24px rgba(0,0,0,.12); cursor:pointer }
+    .controls small { color:#666 }
+    .toolbar { position:absolute; right:12px; top:12px; z-index:1000; display:flex; gap:8px; flex-wrap:wrap }
+    .toolbar button { background:#fff; border:1px solid #eee; border-radius:10px; padding:8px 10px; box-shadow:var(--shadow); cursor:pointer }
+    .legend { position:absolute; right:12px; bottom:12px; z-index:1000; background:#fff; border:1px solid #eee; border-radius:12px; box-shadow:var(--shadow); padding:10px; font-family:system-ui; font-size:12px }
+    .chip { display:inline-flex; align-items:center; gap:6px; border:1px solid #eee; border-radius:999px; padding:4px 8px; margin-right:6px; background:#fff }
+    .dot { width:10px; height:10px; border-radius:50% }
+    .tt { background: rgba(255,255,255,0.92); color:#111; border:1px solid #ddd; border-radius:8px; box-shadow:0 3px 12px rgba(0,0,0,.12); padding:6px 8px; }
     .freg-label { background: rgba(255,255,255,0.85); border-radius: 6px; padding: 2px 6px; border: 1px solid #ddd; font-weight: 600 }
+    .brand { position:absolute; right:12px; top:64px; z-index:1000; background:#fff; border:1px solid #eee; border-radius:12px; box-shadow:var(--shadow); padding:8px 10px; font-family:system-ui; font-size:12px; display:flex; align-items:center; gap:8px }
+    .brand .logo { width:10px; height:10px; border-radius:50%; background:var(--brand) }
   </style>
 </head>
 <body>
   <div class="controls">
-    <strong>Mapa do Porto</strong> — Importa **CSV, XLSX, GeoJSON** (cabeçalhos: name/notes/status/lat/lng).<br/>
-    <label>Importar ficheiro (CSV / XLSX / GeoJSON)</label>
-    <input type="file" id="fileInput" accept=".csv,.xlsx,.xls,.geojson,.json" />
-    <label>Estado</label>
+    <strong>Mapa do Porto</strong> — Importa **XLSX, CSV (vírgula ou ;), GeoJSON**.<br/>
+    <small>Os pins mostram **Nome + Notas + Estado** em etiquetas fixas (sem clique).</small>
+    <label>Importar ficheiro (XLSX / CSV / GeoJSON)</label>
+    <input type="file" id="fileInput" accept=".xlsx,.xls,.csv,.geojson,.json" />
+    <label>Estado (para adicionar manualmente)</label>
     <select id="pinStatus">
       <option value="licenciado">Licenciado</option>
       <option value="em_construcao" selected>Em construção</option>
@@ -32,12 +42,25 @@
     <label>Notas</label><textarea id="pinNotes" rows="2" placeholder="T2/T3; promotor X"></textarea>
     <button id="enableAdd">Ativar modo “Adicionar Pin”</button>
     <button id="clearPins" style="background:#f3f3f3;color:#111">Limpar pins</button>
+    <label>Mostrar rótulos de freguesia</label>
+    <select id="labelsToggle"><option value="on">Sim</option><option value="off">Não</option></select>
   </div>
+
   <div class="toolbar">
     <button id="fitBtn">Recentrar</button>
     <button id="switchBase">Alternar base</button>
+    <button id="toggleTooltips">Ocultar/Mostrar etiquetas</button>
   </div>
+
+  <div class="brand"><div class="logo"></div> Garvetur Luxury Porto</div>
+
   <div id="map"></div>
+
+  <div class="legend">
+    <div class="chip"><span class="dot" style="background:#22a447"></span> Licenciado</div>
+    <div class="chip"><span class="dot" style="background:#f39c12"></span> Em construção</div>
+    <div class="chip"><span class="dot" style="background:#2e86de"></span> Concluído</div>
+  </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
@@ -49,31 +72,56 @@
     ];
     const map=L.map('map').setView([41.1496,-8.6109],12); let baseIdx=0; bases[baseIdx].addTo(map);
     document.getElementById('switchBase').onclick=()=>{ map.removeLayer(bases[baseIdx]); baseIdx=(baseIdx+1)%bases.length; bases[baseIdx].addTo(map); };
+
     const pins=L.featureGroup().addTo(map);
-    const COLORS={licenciado:'#22a447',em_construcao:'#f39c12',concluido:'#2e86de'};
+    const COLORS={licenciado:'#22a447', em_construcao:'#f39c12', concluido:'#2e86de'};
+    let tooltipsVisible=true;
+
     function icon(c){const s=encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' width='28' height='40' viewBox='0 0 28 40'><path d='M14 0C6.268 0 0 6.268 0 14c0 9.333 12.25 24.667 13.016 25.641a1.25 1.25 0 0 0 1.968 0C15.75 38.667 28 23.333 28 14 28 6.268 21.732 0 14 0z' fill='${c}' stroke='rgba(0,0,0,0.35)' stroke-width='1'/><circle cx='14' cy='14' r='5.5' fill='white' stroke='rgba(0,0,0,0.25)'/></svg>`);return L.icon({iconUrl:'data:image/svg+xml;utf8,'+s,iconSize:[28,40],iconAnchor:[14,40],popupAnchor:[0,-34]});}
+
+    function buildTooltipHtml({name,notes,status}){
+      const s = (status||'').toString().replace('_',' ');
+      const n = (notes||'').toString();
+      return `<div><strong>${name||'Empreendimento'}</strong>${n?'<br>'+n:''}<br><em>Estado: ${s}</em></div>`;
+    }
+
     function addPin(lat,lng,{name='Empreendimento',notes='',status='em_construcao'}={}){
       const m=L.marker([lat,lng],{icon:icon(COLORS[status]||COLORS.em_construcao),draggable:true});
+      const tth=buildTooltipHtml({name,notes,status});
+      m.bindTooltip(tth,{permanent:true,direction:'top',className:'tt',opacity:tooltipsVisible?1:0}).openTooltip();
       m.bindPopup(`<strong>${name}</strong><br>${notes}<br><small>${status.replace('_',' ')}</small><br><small>${lat.toFixed(6)}, ${lng.toFixed(6)}</small>`);
       m.feature={type:'Feature',properties:{name,notes,status},geometry:{type:'Point',coordinates:[lng,lat]}};
       pins.addLayer(m); return m;
     }
+
+    document.getElementById('toggleTooltips').onclick=()=>{
+      tooltipsVisible=!tooltipsVisible;
+      pins.eachLayer(l=>{
+        const tt = l.getTooltip();
+        if(tt){ tt.setOpacity(tooltipsVisible?1:0); }
+      });
+    };
+
     document.getElementById('fitBtn').onclick=()=>{ if(pins.getLayers().length) map.fitBounds(pins.getBounds(),{padding:[40,40]}); };
     document.getElementById('clearPins').onclick=()=>pins.clearLayers();
+
     let addMode=false; const pinStatus=document.getElementById('pinStatus'), pinName=document.getElementById('pinName'), pinNotes=document.getElementById('pinNotes');
     document.getElementById('enableAdd').onclick=()=>addMode=!addMode;
     map.on('click',e=>{ if(!addMode) return; addPin(e.latlng.lat,e.latlng.lng,{name:pinName.value.trim()||'Empreendimento',notes:pinNotes.value.trim()||'',status:pinStatus.value}).openPopup(); });
+
     function norm(v){return (v||'').toString().trim();}
     function toNum(v){ if(v==null) return NaN; v=v.toString().trim().replace(',','.'); return parseFloat(v); }
     function headersIdx(hdrs,names){names=Array.isArray(names)?names:[names]; for(let n of names){const i=hdrs.indexOf(n); if(i>-1) return i;} return -1;}
+
+    // CSV parser (vírgula ou ;) com aspas
     function parseCSV(txt){
       if (txt.charCodeAt(0)===0xFEFF) txt=txt.slice(1);
       const first=(txt.split(/\r?\n/)[0]||'').trim();
       const sep=(first.split(';').length>first.split(',').length)?';':',';
       const rows=[]; let row=[], field='', q=false;
-      for(let i=0;i<txt.length;i++){const c=txt[i],n=txt[i+1]; if(c==='"'){ if(q && n==='"'){ field+='"'; i++; } else { q=!q; } }
+      for(let i=0;i<txt.length;i++){const c=txt[i],n=txt[i+1]; if(c=='"'){ if(q&&n=='"'){ field+='"'; i++; } else { q=!q; } }
         else if(c===sep && !q){ row.push(field); field=''; }
-        else if((c==='\n'||c==='\r') && !q){ if(field!==''||row.length){ row.push(field); rows.push(row); row=[]; field=''; } while(txt[i+1]==='\n'||txt[i+1]==='\r') i++; }
+        else if((c=='\n'||c=='\r') && !q){ if(field!==''||row.length){ row.push(field); rows.push(row); row=[]; field=''; } while(txt[i+1]=='\n'||txt[i+1]=='\r') i++; }
         else { field+=c; } }
       if(field!==''||row.length){ row.push(field); rows.push(row); }
       const hdrs=(rows.shift()||[]).map(h=>norm(h).toLowerCase());
@@ -87,12 +135,14 @@
       for(const r of rows){
         const name = iName>-1? r[iName] : 'Empreendimento';
         const notes = iNotes>-1? r[iNotes] : '';
-        const status = iStatus>-1? r[iStatus] : 'em_construcao';
+        const status = (iStatus>-1? r[iStatus] : 'em_construcao') || 'em_construcao';
         const lat = toNum(r[iLat]), lng = toNum(r[iLng]);
         if(!isNaN(lat) && !isNaN(lng)) out.push({name,notes,status,lat,lng});
       }
       return out;
     }
+
+    // Importar arquivos: XLSX, CSV, GeoJSON
     document.getElementById('fileInput').addEventListener('change', (evt)=>{
       const f=evt.target.files[0]; if(!f) return;
       const rdr=new FileReader();
@@ -130,6 +180,25 @@
       };
       if(f.name.toLowerCase().endsWith('.xlsx')||f.name.toLowerCase().endsWith('.xls')) rdr.readAsArrayBuffer(f); else rdr.readAsText(f);
     });
+
+    // Freguesias (com tolerância a falhas)
+    const freguesiasUrl='https://arcgis.aguasdoporto.pt/arcgis/rest/services/Porto_mais_permeavel/Porto_mais_permeavel/MapServer/7/query?where=1%3D1&outFields=*&f=geojson';
+    let labelLayer=L.layerGroup();
+    fetch(freguesiasUrl).then(r=>r.json()).then(geo=>{
+      const freguesias=L.geoJSON(geo,{ style:{ color:'#111', weight:1.5, fillColor:'#bfa06a', fillOpacity:0.06 }, onEachFeature:(feature,layer)=>{ const nome=feature.properties?.FREGUESIA||feature.properties?.NOME||'Freguesia'; layer.bindPopup(`<strong>${nome}</strong>`); } }).addTo(map);
+      labelLayer=L.layerGroup();
+      (geo.features||[]).forEach(feat=>{
+        const nome=feat.properties?.FREGUESIA||feat.properties?.NOME||'Freguesia';
+        const coords=(feat.geometry&&feat.geometry.coordinates)||[]; const flat=coords.flat(2);
+        let minX=Infinity,minY=Infinity,maxX=-Infinity,maxY=-Infinity;
+        for(let i=0;i<flat.length;i+=2){ const x=flat[i], y=flat[i+1]; if(x<minX)minX=x; if(x>maxX)maxX=x; if(y<minY)minY=y; if(y>maxY)maxY=y; }
+        const cx=(minY+maxY)/2, cy=(minX+maxX)/2; const label=L.marker([cx, cy],{ interactive:false, opacity:0.0 });
+        label.bindTooltip(nome,{ permanent:true, direction:'center', className:'freg-label' }).openTooltip(); labelLayer.addLayer(label);
+      });
+      labelLayer.addTo(map);
+    }).catch(err=>{ console.warn('Falha a carregar freguesias:', err); });
+
+    document.getElementById('labelsToggle').addEventListener('change',(e)=>{ if(e.target.value==='on'){ labelLayer.addTo(map);} else { map.removeLayer(labelLayer);} });
   </script>
 </body>
 </html>
