--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Garvetur Luxury Porto — Mapa do Porto (XLSX/CSV/GeoJSON + Tooltips)</title>
+  <title>Garvetur Luxury Porto — Mapa (XLSX/CSV/GeoJSON + Tooltips + Links)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     :root { --panel:#ffffff; --shadow:0 6px 24px rgba(0,0,0,.12); --radius:12px; --brand:#bfa06a; --dark:#111; }
     html, body { height:100%; margin:0; background:#f5efe6 }
     #map { position:absolute; inset:0 }
-    .controls { position:absolute; top:12px; left:12px; z-index:1000; background:var(--panel); padding:12px; border-radius:var(--radius); box-shadow:var(--shadow); font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial; max-width:480px; border:1px solid #eee }
+    .controls { position:absolute; top:12px; left:12px; z-index:1000; background:var(--panel); padding:12px; border-radius:var(--radius); box-shadow:var(--shadow); font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial; max-width:520px; border:1px solid #eee }
     .controls strong { color:var(--dark) }
     .controls label { display:block; font-size:12px; margin-top:8px }
     .controls input, .controls select, .controls textarea { width:100%; padding:6px 8px; border:1px solid #ddd; border-radius:8px; font-size:12px }
     .controls button { margin-top:8px; padding:8px 10px; border:0; border-radius:10px; cursor:pointer; background:#111; color:#fff }
-    .controls small { color:#666 }
     .toolbar { position:absolute; right:12px; top:12px; z-index:1000; display:flex; gap:8px; flex-wrap:wrap }
     .toolbar button { background:#fff; border:1px solid #eee; border-radius:10px; padding:8px 10px; box-shadow:var(--shadow); cursor:pointer }
     .legend { position:absolute; right:12px; bottom:12px; z-index:1000; background:#fff; border:1px solid #eee; border-radius:12px; box-shadow:var(--shadow); padding:10px; font-family:system-ui; font-size:12px }
@@ -22,14 +21,12 @@
     .dot { width:10px; height:10px; border-radius:50% }
     .tt { background: rgba(255,255,255,0.92); color:#111; border:1px solid #ddd; border-radius:8px; box-shadow:0 3px 12px rgba(0,0,0,.12); padding:6px 8px; }
     .freg-label { background: rgba(255,255,255,0.85); border-radius: 6px; padding: 2px 6px; border: 1px solid #ddd; font-weight: 600 }
-    .brand { position:absolute; right:12px; top:64px; z-index:1000; background:#fff; border:1px solid #eee; border-radius:12px; box-shadow:var(--shadow); padding:8px 10px; font-family:system-ui; font-size:12px; display:flex; align-items:center; gap:8px }
-    .brand .logo { width:10px; height:10px; border-radius:50%; background:var(--brand) }
   </style>
 </head>
 <body>
   <div class="controls">
     <strong>Mapa do Porto</strong> — Importa **XLSX, CSV (vírgula ou ;), GeoJSON**.<br/>
-    <small>Os pins mostram **Nome + Notas + Estado** em etiquetas fixas (sem clique).</small>
+    <small>Tooltips mostram <strong>Nome + Notas + Estado + AnoConclusao</strong> automaticamente. Popups incluem botões para Link e Tabela de Vendas (PDF) se existirem.</small>
     <label>Importar ficheiro (XLSX / CSV / GeoJSON)</label>
     <input type="file" id="fileInput" accept=".xlsx,.xls,.csv,.geojson,.json" />
     <label>Estado (para adicionar manualmente)</label>
@@ -40,6 +37,9 @@
     </select>
     <label>Nome</label><input id="pinName" placeholder="Ex.: Empreendimento" />
     <label>Notas</label><textarea id="pinNotes" rows="2" placeholder="T2/T3; promotor X"></textarea>
+    <label>AnoConclusao</label><input id="pinYear" type="number" placeholder="2026" />
+    <label>Link (URL)</label><input id="pinLink" placeholder="https://..." />
+    <label>TabelaVendas (URL de PDF)</label><input id="pinPDF" placeholder="https://.../tabela.pdf" />
     <button id="enableAdd">Ativar modo “Adicionar Pin”</button>
     <button id="clearPins" style="background:#f3f3f3;color:#111">Limpar pins</button>
     <label>Mostrar rótulos de freguesia</label>
@@ -51,8 +51,6 @@
     <button id="switchBase">Alternar base</button>
     <button id="toggleTooltips">Ocultar/Mostrar etiquetas</button>
   </div>
-
-  <div class="brand"><div class="logo"></div> Garvetur Luxury Porto</div>
 
   <div id="map"></div>
 
@@ -79,41 +77,58 @@
 
     function icon(c){const s=encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' width='28' height='40' viewBox='0 0 28 40'><path d='M14 0C6.268 0 0 6.268 0 14c0 9.333 12.25 24.667 13.016 25.641a1.25 1.25 0 0 0 1.968 0C15.75 38.667 28 23.333 28 14 28 6.268 21.732 0 14 0z' fill='${c}' stroke='rgba(0,0,0,0.35)' stroke-width='1'/><circle cx='14' cy='14' r='5.5' fill='white' stroke='rgba(0,0,0,0.25)'/></svg>`);return L.icon({iconUrl:'data:image/svg+xml;utf8,'+s,iconSize:[28,40],iconAnchor:[14,40],popupAnchor:[0,-34]});}
 
-    function buildTooltipHtml({name,notes,status}){
+    function buildTooltipHtml({name,notes,status,ano}){
       const s = (status||'').toString().replace('_',' ');
       const n = (notes||'').toString();
-      return `<div><strong>${name||'Empreendimento'}</strong>${n?'<br>'+n:''}<br><em>Estado: ${s}</em></div>`;
+      const y = ano ? `<br><small>Conclusão: ${ano}</small>` : '';
+      return `<div><strong>${name||'Empreendimento'}</strong>${n?'<br>'+n:''}<br><em>Estado: ${s}</em>${y}</div>`;
     }
+    function sanitizeUrl(u){ try { const url=new URL(u); return url.href; } catch(e){ return ''; } }
 
-    function addPin(lat,lng,{name='Empreendimento',notes='',status='em_construcao'}={}){
+    function addPin(lat,lng,{name='Empreendimento',notes='',status='em_construcao',ano=null,link='',pdf=''}={}){
       const m=L.marker([lat,lng],{icon:icon(COLORS[status]||COLORS.em_construcao),draggable:true});
-      const tth=buildTooltipHtml({name,notes,status});
+      const tth=buildTooltipHtml({name,notes,status,ano});
       m.bindTooltip(tth,{permanent:true,direction:'top',className:'tt',opacity:tooltipsVisible?1:0}).openTooltip();
-      m.bindPopup(`<strong>${name}</strong><br>${notes}<br><small>${status.replace('_',' ')}</small><br><small>${lat.toFixed(6)}, ${lng.toFixed(6)}</small>`);
-      m.feature={type:'Feature',properties:{name,notes,status},geometry:{type:'Point',coordinates:[lng,lat]}};
+
+      const bLink = sanitizeUrl(link) ? `<a href="${sanitizeUrl(link)}" target="_blank" rel="noopener" style="display:inline-block;margin-top:6px;">🔗 Ver ficha online</a>` : '';
+      const bPDF  = sanitizeUrl(pdf)  ? `<a href="${sanitizeUrl(pdf)}"  target="_blank" rel="noopener" style="display:inline-block;margin-left:10px;margin-top:6px;">📄 Tabela de Vendas</a>` : '';
+      const year  = ano ? `<br><small>Ano conclusão: ${ano}</small>` : '';
+      m.bindPopup(`<strong>${name}</strong><br>${notes}<br><small>${status.replace('_',' ')}</small>${year}<br><small>${lat.toFixed(6)}, ${lng.toFixed(6)}</small><br>${bLink}${bPDF}`);
+
+      m.feature={type:'Feature',properties:{name,notes,status,anoConclusao:ano,link:link,pdf:pdf},geometry:{type:'Point',coordinates:[lng,lat]}};
       pins.addLayer(m); return m;
     }
 
     document.getElementById('toggleTooltips').onclick=()=>{
       tooltipsVisible=!tooltipsVisible;
-      pins.eachLayer(l=>{
-        const tt = l.getTooltip();
-        if(tt){ tt.setOpacity(tooltipsVisible?1:0); }
-      });
+      pins.eachLayer(l=>{ const tt=l.getTooltip(); if(tt){ tt.setOpacity(tooltipsVisible?1:0); } });
     };
 
     document.getElementById('fitBtn').onclick=()=>{ if(pins.getLayers().length) map.fitBounds(pins.getBounds(),{padding:[40,40]}); };
     document.getElementById('clearPins').onclick=()=>pins.clearLayers();
 
-    let addMode=false; const pinStatus=document.getElementById('pinStatus'), pinName=document.getElementById('pinName'), pinNotes=document.getElementById('pinNotes');
+    let addMode=false;
+    const pinStatus=document.getElementById('pinStatus'), pinName=document.getElementById('pinName'), pinNotes=document.getElementById('pinNotes'),
+          pinYear=document.getElementById('pinYear'), pinLink=document.getElementById('pinLink'), pinPDF=document.getElementById('pinPDF');
     document.getElementById('enableAdd').onclick=()=>addMode=!addMode;
-    map.on('click',e=>{ if(!addMode) return; addPin(e.latlng.lat,e.latlng.lng,{name:pinName.value.trim()||'Empreendimento',notes:pinNotes.value.trim()||'',status:pinStatus.value}).openPopup(); });
+    map.on('click',e=>{
+      if(!addMode) return;
+      addPin(e.latlng.lat,e.latlng.lng,{
+        name:pinName.value.trim()||'Empreendimento',
+        notes:pinNotes.value.trim()||'',
+        status:pinStatus.value,
+        ano: pinYear.value ? parseInt(pinYear.value,10) : null,
+        link: pinLink.value.trim(),
+        pdf: pinPDF.value.trim()
+      }).openPopup();
+    });
 
     function norm(v){return (v||'').toString().trim();}
     function toNum(v){ if(v==null) return NaN; v=v.toString().trim().replace(',','.'); return parseFloat(v); }
     function headersIdx(hdrs,names){names=Array.isArray(names)?names:[names]; for(let n of names){const i=hdrs.indexOf(n); if(i>-1) return i;} return -1;}
+    function toYear(v){ const y=parseInt((v||'').toString().trim(),10); return (y>=1900 && y<=2100)? y : null; }
 
-    // CSV parser (vírgula ou ;) com aspas
+    // CSV parser (vírgula/;) com aspas
     function parseCSV(txt){
       if (txt.charCodeAt(0)===0xFEFF) txt=txt.slice(1);
       const first=(txt.split(/\r?\n/)[0]||'').trim();
@@ -130,6 +145,9 @@
       const iStatus=headersIdx(hdrs,['status','estado','fase']);
       const iLat=headersIdx(hdrs,['lat','latitude','y']);
       const iLng=headersIdx(hdrs,['lng','lon','long','longitude','x']);
+      const iYear=headersIdx(hdrs,['anoconclusao','ano','ano_conclusao','conclusao']);
+      const iLink=headersIdx(hdrs,['link','url','site']);
+      const iPDF=headersIdx(hdrs,['tabelavendas','tabela','pdf','tabela_vendas']);
       if(iLat===-1||iLng===-1) throw new Error('Cabeçalhos em falta (lat/latitude e lng/longitude).');
       const out=[];
       for(const r of rows){
@@ -137,12 +155,15 @@
         const notes = iNotes>-1? r[iNotes] : '';
         const status = (iStatus>-1? r[iStatus] : 'em_construcao') || 'em_construcao';
         const lat = toNum(r[iLat]), lng = toNum(r[iLng]);
-        if(!isNaN(lat) && !isNaN(lng)) out.push({name,notes,status,lat,lng});
+        const ano = iYear>-1 ? toYear(r[iYear]) : null;
+        const link = iLink>-1 ? r[iLink] : '';
+        const pdf  = iPDF>-1 ? r[iPDF] : '';
+        if(!isNaN(lat) && !isNaN(lng)) out.push({name,notes,status,lat,lng,ano,link,pdf});
       }
       return out;
     }
 
-    // Importar arquivos: XLSX, CSV, GeoJSON
+    // Importar ficheiros
     document.getElementById('fileInput').addEventListener('change', (evt)=>{
       const f=evt.target.files[0]; if(!f) return;
       const rdr=new FileReader();
@@ -151,12 +172,19 @@
           const name=f.name.toLowerCase();
           if(name.endsWith('.geojson')||name.endsWith('.json')){
             const geo=JSON.parse(e.target.result);
-            L.geoJSON(geo, { pointToLayer:(feat,latlng)=>addPin(latlng.lat,latlng.lng,{name:feat.properties?.name||'Empreendimento',notes:feat.properties?.notes||'',status:feat.properties?.status||'em_construcao'}) });
+            L.geoJSON(geo, { pointToLayer:(feat,latlng)=>addPin(latlng.lat,latlng.lng,{
+              name:feat.properties?.name||'Empreendimento',
+              notes:feat.properties?.notes||'',
+              status:feat.properties?.status||'em_construcao',
+              ano: toYear(feat.properties?.anoConclusao||feat.properties?.ano),
+              link: feat.properties?.link||'',
+              pdf:  feat.properties?.pdf||feat.properties?.tabelaVendas||''
+            }) });
             if(pins.getLayers().length) map.fitBounds(pins.getBounds(),{padding:[40,40]});
           } else if(name.endsWith('.csv')){
             const rows=parseCSV(e.target.result);
-            if(!rows.length) { alert('CSV sem linhas válidas. Verifique colunas name/notes/status/lat/lng.'); return; }
-            rows.forEach(r=>addPin(r.lat,r.lng,{name:r.name,notes:r.notes,status:r.status}));
+            if(!rows.length) { alert('CSV sem linhas válidas. Verifique colunas name/notes/status/lat/lng (+ AnoConclusao/Link/TabelaVendas opcionais).'); return; }
+            rows.forEach(r=>addPin(r.lat,r.lng,{name:r.name,notes:r.notes,status:r.status,ano:r.ano,link:r.link,pdf:r.pdf}));
             map.fitBounds(pins.getBounds(),{padding:[40,40]});
           } else if(name.endsWith('.xlsx')||name.endsWith('.xls')){
             const wb=XLSX.read(new Uint8Array(e.target.result), {type:'array'});
@@ -168,10 +196,13 @@
               notes: get(r,['notes','notas','descricao','descrição','observacoes','observações']),
               status: get(r,['status','estado','fase'])||'em_construcao',
               lat: parseFloat((get(r,['lat','latitude','y'])||'').toString().replace(',','.')),
-              lng: parseFloat((get(r,['lng','lon','long','longitude','x'])||'').toString().replace(',','.'))
+              lng: parseFloat((get(r,['lng','lon','long','longitude','x'])||'').toString().replace(',','.')),
+              ano: toYear(get(r,['anoconclusao','ano','ano_conclusao','conclusao'])),
+              link: get(r,['link','url','site']),
+              pdf:  get(r,['tabelavendas','tabela','pdf','tabela_vendas'])
             })).filter(r=>!isNaN(r.lat)&&!isNaN(r.lng));
-            if(!rows.length){ alert('XLSX sem linhas válidas. Confirme colunas name/notes/status/lat/lng.'); return; }
-            rows.forEach(r=>addPin(r.lat,r.lng,{name:r.name,notes:r.notes,status:r.status}));
+            if(!rows.length){ alert('XLSX sem linhas válidas. Confirme colunas name/notes/status/lat/lng (+ AnoConclusao/Link/TabelaVendas).'); return; }
+            rows.forEach(r=>addPin(r.lat,r.lng,{name:r.name,notes:r.notes,status:r.status,ano:r.ano,link:r.link,pdf:r.pdf}));
             map.fitBounds(pins.getBounds(),{padding:[40,40]});
           } else {
             alert('Formato não suportado.');
